# Apparel-Image-Classification-with-WideResNet

./: .gitignore  Apparel_Image_Classification_with_WideResNet.ipynb  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apparel_classifier/: __init__.py  __main__.py  api.py  cli.py  data.py  infer.py  labels.py  model.py  train.py
artifacts/: .gitkeep  latency_benchmark.json
scripts/: benchmark_latency.py
tests/: test_api.py  test_apparel_image_classificat.py  test_infer.py  test_latency.py  test_model.py  test_train.py
