[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apparel-classifier"
version = "1.0.0"
description = "Production WideResNet apparel image classification (Fashion-MNIST) with FastAPI serving"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Archana Chetan" }]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "Pillow>=10.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.5",
]

[project.scripts]
apparel-classify = "apparel_classifier.cli:main"

[tool.setuptools.packages.find]
include = ["apparel_classifier*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
